frontend/test/should_fail/retype_019paraltopt.grg
using retype_model_001;

rule r {
	x:TYPE1;

	alternative {
		First {
			modify {
				y:TYPE2<x>;
			}
		}
		Second {
			modify {}
		}
	}

	optional {
		modify {
			y:TYPE2<x>;
		}
	}

	modify {
	}
}

